# DoveSmart

./: README.md  terminal_command.md  日志.md
origincar/config/: dove_smart_nv12.json  obstacles.list  yolov5sconfig.json
origincar/origincar_base/config/: ekf.yaml
origincar/origincar_base/launch/: origincar_bringup.launch.py
origincar/origincar_bringup/launch/: camera.launch.py  capimage.launch.py  capvideo.launch.py  usb_websocket_display.launch.py
origincar/origincar_capimage/: package.xml  setup.cfg  setup.py
origincar/origincar_capimage/launch/: capimage.launch.py
origincar/origincar_capimage/origincar_capimage/: capimage.py  capvideo.py
origincar/origincar_dove/: package.xml  setup.cfg  setup.py
origincar/origincar_dove/launch/: dove.launch.py
origincar/origincar_dove/origincar_dove/: node_control_sh.py
origincar/origincar_dove/sh/: start1.sh  start2.sh  start3.sh
origincar/origincar_lifecycle/: package.xml  setup.cfg  setup.py
origincar/origincar_lifecycle/launch/: LifecycleManager.launch.py
origincar/origincar_lifecycle/origincar_lifecycle/: LifecycleManager.py  QrCodeDetection.py
origincar/origincar_linefollower/: package.xml  setup.cfg  setup.py
origincar/origincar_linefollower/launch/: linefollower.launch.py
origincar/origincar_linefollower/origincar_linefollower/: follower.py  follower_adaptive.py
origincar/origincar_move_yolo/: CMakeLists.txt  package.xml
origincar/origincar_move_yolo/include/origincar_move_yolo/: origincar_move_yolo.h
origincar/origincar_move_yolo/src/: origincar_move_yolo.cpp
origincar/qr_code_detection/: package.xml  setup.py
origincar/qr_code_detection/launch/: qr_code_detection.launch.py
origincar/qr_code_detection/qr_code_detection/: qr_detection_node.py  qr_detection_opencv.py
origincar_linefollower/: setup.py
yolo模型/config/: origincar_config.json
yolo模型/source code/: common.py  export.py  yolo.py
